objects/CC_Quote_Limit__c.object
<CustomObject>
    <fields>
        <fullName>Discounted_Percentage__c</fullName>
        <label>Discounted Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Discounted_Price__c</fullName>
        <label>Discounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC Quote Limits</relationshipLabel>
        <relationshipName>CC_Quote_Limits</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CC Quote Limit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Discounted_Percentage__c</columns>
        <columns>Discounted_Price__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CQ-{0000}</displayFormat>
        <label>CC Quote Limit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Quote Limits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Discounted_Percentage_and_Price</fullName>
        <active>true</active>
        <description>Discounted Percentage and Price value check, both can not filled at same time</description>
        <errorConditionFormula>Discounted_Percentage__c &gt; 0 &amp;&amp;  Discounted_Price__c &gt;0</errorConditionFormula>
        <errorMessage>Discounted Percentage and Discounted Price, both fields cannot have value at same time</errorMessage>
    </validationRules>
</CustomObject>